--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@clerk/elements": "^0.23.32",
     "@clerk/nextjs": "^6.21.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -48,6 +49,7 @@
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "framer-motion": "^12.16.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "postcss": "^8.5.4",
